--- a/static/header.css
+++ b/static/header.css
@@ -85,7 +85,7 @@ header {
             top: 100%;
             left: -70%;
             height: auto;
-            width: 30%;
+            width: 40%;
             background: rgba(255, 0, 0, 0.1);
             backdrop-filter: blur(5px);
             -webkit-backdrop-filter: blur(8px);
@@ -113,7 +113,7 @@ header {
         }
 
         nav ul li a {
-            color: black;
+            color: white;
             font-size: 1.2em;
             display: block;
             padding: 0.5em 0;
