--- a/static/header.css
+++ b/static/header.css
@@ -113,7 +113,7 @@ header {
         }
 
         nav ul li a {
-            color: white;
+            color: green;
             font-size: 1.2em;
             display: block;
             padding: 0.5em 0;
